updated system messages

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ node_modules
 .vscode-test/
 *.vsix
 .env
+.vscode/**
+.vscode-test/**
+out/**
+node_modules/**
+src/**
+.gitignore
+.yarnrc
+webpack.config.js
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
+**/.vscode-test.*
